module2-clusterip/lab2-ingress/01-deployment-hello-world.yaml
# Lab 2.2 / 2.3 - f5-hello-world app (identical to module 1)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world-web
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: f5-hello-world-web
  template:
    metadata:
      labels:
        app: f5-hello-world-web
    spec:
      containers:
        - name: f5-hello-world-web
          image: nginxdemos/hello:plain-text
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
